--- a/index.html
+++ b/index.html
@@ -1,110 +1,89 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abdelazim Gad | Links</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <title>Abdelazim Gad - Links</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Inter', sans-serif;
-    }
-
     body {
-      background: url('https://images.unsplash.com/photo-1638361336043-9273e90dc7bb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px;
-    }
-
-    .container {
-      background-color: rgba(255, 255, 255, 0.95);
-      padding: 30px;
-      border-radius: 20px;
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
       text-align: center;
-      max-width: 400px;
-      width: 100%;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      padding: 20px;
     }
-
-    .profile-img {
+    .profile-pic {
       width: 120px;
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #3498db;
+      border: 3px solid #fff;
       margin-bottom: 15px;
     }
-
     h1 {
-      font-size: 24px;
-      font-weight: 800;
-      margin-bottom: 8px;
+      margin: 10px 0 5px;
+      font-size: 22px;
+      color: #fff;
     }
-
     p {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 20px;
+      margin: 5px 0 20px;
+      color: skyblue;
+      font-weight: bold;
     }
-
-    .link {
+    .link-button {
       display: flex;
       align-items: center;
-      gap: 10px;
-      background-color: #3498db;
-      color: white;
+      justify-content: center;
+      background-color: #fff;
+      color: #000;
       text-decoration: none;
       padding: 12px;
-      margin: 10px 0;
-      border-radius: 10px;
-      transition: background 0.3s;
-      justify-content: center;
+      margin: 10px auto;
+      width: 250px;
+      border-radius: 12px;
+      font-size: 16px;
+      font-weight: bold;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
-
-    .link:hover {
-      background-color: #2c80b4;
+    .link-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(255,255,255,0.3);
     }
-
-    .link img {
+    .icon {
       width: 20px;
       height: 20px;
+      margin-right: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="profile.jpg" alt="Abdelazim Gad" class="profile-img">
-    <h1>Abdelazim Gad</h1>
-    <p>Mechatronics Student | Robotics & Tech Enthusiast</p>
+  <img src="profile.jpg" alt="Profile Picture" class="profile-pic" />
+  <h1>Abdelazim Gad</h1>
+  <p>Mechatronics Student | Robotics & Tech Enthusiast | PCB Designer Engineer 👷</p>
 
-    <a class="link" href="https://www.tiktok.com/@abdelazimgad2005?_t=ZS-8wnbYTQp7hY&_r=1" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">TikTok
-    </a>
-    <a class="link" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968956.png" alt="Threads">Threads
-    </a>
-    <a class="link" href="https://www.instagram.com/_eng_abdelazim_gad_?igsh=cDFscHNlNzJqa3Zm" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">Instagram
-    </a>
-    <a class="link" href="https://www.facebook.com/share/1Ad3NZtJ81/" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">Facebook
-    </a>
-    <a class="link" href="https://wa.me/201061208027" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/220/220236.png" alt="WhatsApp">WhatsApp 1
-    </a>
-    <a class="link" href="https://wa.me/201018337012" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/220/220236.png" alt="WhatsApp">WhatsApp 2
-    </a>
-    <a class="link" href="tel:01018337012" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/597/597177.png" alt="Phone">Phone
-    </a>
-  </div>
+  <a class="link-button" href="https://www.tiktok.com/@abdelazimgad2005?_t=ZS-8wnbYTQp7hY&_r=1" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" alt="TikTok" /> TikTok
+  </a>
+  <a class="link-button" href="https://www.threads.net/@_eng_abdelazim_gad_" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/threads.svg" alt="Threads" /> Threads
+  </a>
+  <a class="link-button" href="https://www.instagram.com/_eng_abdelazim_gad_" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram" /> Instagram
+  </a>
+  <a class="link-button" href="https://www.facebook.com/share/1Ad3NZtJ81/" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook" /> Facebook
+  </a>
+  <a class="link-button" href="https://wa.me/201061208027" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" alt="WhatsApp" /> WhatsApp 1
+  </a>
+  <a class="link-button" href="https://wa.me/201018337012" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" alt="WhatsApp" /> WhatsApp 2
+  </a>
+  <a class="link-button" href="tel:01018337012" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/phone.svg" alt="Phone" /> Phone
+  </a>
+  <a class="link-button" href="https://www.linkedin.com/in/abdel-azim-gad-79541b356" target="_blank">
+    <img class="icon" src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/linkedin.svg" alt="LinkedIn" /> LinkedIn
+  </a>
 </body>
 </html>
